--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,9 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_home">My Pokemon</string>
     <string name="menu_gallery">Generation One</string>
     <string name="menu_slideshow">Generation Two</string>
     <string name="menu_tools">Generation Three</string>
     <string name="menu_share">Generation Four</string>
-    <string name="menu_send">Favourites</string>
 </resources>
